--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="https://github.com/FabioSilva19/site_enext/blob/gh-pages/css">
 	<title>Minha página</title>
 </head>
 <body>
